solve warnings